# mosaico-ip-agent

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  REUSE.toml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-ghcr.yml  pypi-publish.yml
src/mosaico_ip_agent/: __init__.py  __main__.py  app.py  executor.py  llm.py  observability.py  services.py
