[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mosaico-ip-agent"
dynamic = ["version"]
authors = [
    { name = "André Gomes", email="34967811+gomes89@users.noreply.github.com" }
]
description = "MOSAICO Solution Agent for IP-related queries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk[http-server]>=0.3.25",
    "langfuse>=4.0.1",
    "litellm>=1.82.4",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
    "httpx>=0.27.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "reuse==6.2.0",
]

[project.urls]
"Homepage" = "https://github.com/gomes89/mosaico-ip-agent"
"Source" = "https://github.com/gomes89/mosaico-ip-agent"
"Issues" = "https://github.com/gomes89/mosaico-ip-agent/issues"
"Changelog" = "https://github.com/gomes89/mosaico-ip-agent/blob/main/CHANGELOG.md"

[project.scripts]
mosaico-ip-agent = "mosaico_ip_agent.__main__:run"

[tool.hatch.version]
path = "src/mosaico_ip_agent/__init__.py"
